@@ -467,7 +467,6 @@
   <block id="240272be1a1d5fdc253c5305b97690a6" category="list-text">Les périphériques d'optimisation réseau (tels que Riverbed Steelhead) doivent être configurés pour permettre la mise en cache des ports spécifiques BlueXP Edge (TCP 6618-6630).</block>
   <block id="84ad7067fb4fe33b40b7fe328b59ab9f" category="summary">La mise en cache à la périphérie NetApp BlueXP vous permet de regrouper des silos de serveurs de fichiers distribués en une seule empreinte de stockage globale cohérente dans le cloud public. Cela crée un système de fichiers accessible partout dans le cloud que tous les emplacements distants peuvent utiliser comme s'ils étaient locaux.</block>
   <block id="4f6236843228fb802118a30a6c81a90a" category="doc">Découvrez la mise en cache BlueXP Edge</block>
-  <block id="e8410929e2565c64ddfb36cc3fe64caf" category="paragraph">La mise en cache BlueXP Edge est disponible dans deux modes de déploiement pour s'adapter à l'architecture de votre entreprise : dans un service intégré combiné dans une instance Cloud Volumes ONTAP (Cloud volumes Edge cache) ou en tant que composant complémentaire de votre stratégie de stockage d'entreprise (Global File cache).</block>
   <block id="f3ca9f1917b50d48c86e0bb25621722e" category="paragraph">L'implémentation de la mise en cache BlueXP Edge donne lieu à une empreinte de stockage unique et centralisée, contrairement à une architecture de stockage distribuée qui requiert une gestion des données locales, la sauvegarde, la sécurité, le stockage et l'empreinte de l'infrastructure dans chaque emplacement.</block>
   <block id="151da762ddb055afbfc300d66c3117dd" category="inline-image-macro">Diagramme illustrant comment les sites distants accèdent à un seul système de fichiers partagé à l'aide de la mise en cache BlueXP Edge.</block>
   <block id="f62fde91dac95b5d3e895ee32a7b77e6" category="paragraph"><block ref="f62fde91dac95b5d3e895ee32a7b77e6" category="inline-image-macro-rx" type="image"></block></block>
@@ -759,4 +758,9 @@
   <block id="70d2aaea6b19d033a76faef23053a806" category="section-title">6 mai 2024 (version 2.4)</block>
   <block id="33ac6c6578bc8387b0ba6aaebc3f939a" category="paragraph">Cette version corrige certains problèmes mineurs. Le pack logiciel mis à jour est disponible sur le site<block ref="89fd140dfa15c4587519958830d6000f" category="inline-link-rx"></block>.</block>
   <block id="39e223ecfe3ee5dc48a36bdee3d5da31" category="paragraph"><block ref="39e223ecfe3ee5dc48a36bdee3d5da31" category="inline-link-rx"></block></block>
+  <block id="4ff2894f6fe94d8a4d90102c6b3fc4b1" category="paragraph">La mise en cache BlueXP Edge est disponible dans deux modes de déploiement adaptés à votre architecture : en tant que service intégré associé à une instance Cloud Volumes ONTAP appelée Cloud volumes Edge cache (CVEC) ou en tant que composant complémentaire de votre stratégie de stockage d'entreprise, appelée Global File cache (GFC).</block>
+  <block id="fc31bdab270f34f9dbc1c826f879ec7a" category="section-title">31 mai 2024</block>
+  <block id="a38c9755f3e363e5fcc012f982f27744" category="paragraph">NetApp a annoncé la fin de disponibilité de NetApp Global File cache le 31 mai 2024. La fin de disponibilité concerne tous les produits NetApp Global File cache, y compris les abonnements logiciels Global File cache autonomes et les packs de solutions Global File cache avec NetApp Cloud Volumes ONTAP, connus sous le nom de NetApp Cloud volumes Edge cache.</block>
+  <block id="fe85d677b887f84abb319ef4415495b6" category="inline-link">Pour en savoir plus sur la fin de disponibilité de NetApp Global File cache, consultez les détails</block>
+  <block id="32537bd355f3c702f88504f670fd2349" category="paragraph">Même si nous annonçons la fin de disponibilité de ces produits, NetApp continuera de les prendre en charge jusqu'au 31 mai 2027 minimum.<block ref="c260bd0a32453373dfa997871e7c7312" category="inline-link-rx"></block>.</block>
 </blocks>
